# CoVid19-global-dashboard

./: .gitignore  README.md  README.txt  main.py  pyproject.toml
.devcontainer/: devcontainer.json
Output/: total_per_country.csv  total_per_country_wide.csv
Programs/: app.py  data_cleaning.ipynb  streamlitApp.py
